--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install python-telegram-bot==20.7
+          pip install python-telegram-bot openai
 
       - name: Run bot
         env:
